--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bootstrap": "^5.1.1",
     "bootstrap-icons": "^1.5.0",
     "jquery": "^3.6.0",
+    "luxon": "^2.0.2",
     "moment": "^2.29.1",
     "ngx-clipboard": "^14.0.1",
     "popper.js": "^1.16.1",
