--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ngx-clipboard": "^14.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
+    "title-case": "^3.0.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
