--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "angular-bootstrap-md": "^11.0.0",
     "bootstrap": "^5.1.1",
     "bootstrap-icons": "^1.5.0",
+    "crypto-js": "^4.1.1",
     "flag-icon-css": "^4.1.6",
     "jquery": "^3.6.0",
     "luxon": "^2.0.2",
